feat: add RESTful GET endpoints for permission queries
